<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Incluir Toolbar -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPerfil"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:text="@string/btn_perfil"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextButton"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnExtravio"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:onClick="extravioCarnet"
                android:text="@string/btn_extravio"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btnCatalogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnNotebooks" />

            <Button
                android:id="@+id/btnCatalogo"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:onClick="abrirCatalogo"
                android:text="@string/btn_catalogo"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnExtravio"
                app:layout_constraintTop_toBottomOf="@+id/btnSanciones" />

            <Button
                android:id="@+id/btnLaboratorio"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_laboratorio"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btnTesistas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPerfil" />

            <Button
                android:id="@+id/btnTesistas"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:onClick="salasTesistas"
                android:text="@string/btn_tesistas"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnLaboratorio"
                app:layout_constraintTop_toBottomOf="@+id/btnPerfil" />

            <Button
                android:id="@+id/btnNotebooks"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:onClick="notebookPrestamo"
                android:text="@string/btn_notebooks"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btnSanciones"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLaboratorio" />

            <Button
                android:id="@+id/btnSanciones"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:onClick="revisarSanciones"
                android:text="@string/btn_sanciones"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnNotebooks"
                app:layout_constraintTop_toBottomOf="@+id/btnTesistas" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="95dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_logout"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorTextButton"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnExtravio" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="95dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:background="@drawable/ripple_effect"
                android:clickable="false"
                android:contentDescription="@string/desc_logo"
                android:onClick="abrirUCSC"
                android:scaleType="fitCenter"
                android:src="@drawable/ucsc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogout" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>